// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <SelectFormGroup /> should renders with all props correctly 1`] = `
<div
  className="form-group"
>
  <label
    className="control-label"
    htmlFor="test-id"
  >
    Test label
  </label>
  <select
    className="form-control input-sm"
    disabled={false}
    id="test-id"
    name="test-name"
    value=""
  >
    <option>
      Test placeholder
    </option>
    <option
      key="__SelectFormGroupOption__1"
      value={1}
    >
      One
    </option>
    <option
      key="__SelectFormGroupOption__2"
      value={2}
    >
      Two
    </option>
    <option
      key="__SelectFormGroupOption__3"
      value={3}
    >
      Three
    </option>
    <option
      key="__SelectFormGroupOption__4"
      value={4}
    >
      For
    </option>
    <option
      key="__SelectFormGroupOption__5"
      value={5}
    >
      Fife
    </option>
  </select>
</div>
`;

exports[`Component <SelectFormGroup /> should renders with different state of validation 1`] = `
<div
  className="form-group"
>
  <label
    className="control-label"
    htmlFor="test-id"
  >
    Test label
  </label>
  <select
    className="form-control input-sm"
    disabled={false}
    id="test-id"
    name="test-name"
    value=""
  >
    <option />
    <option
      key="__SelectFormGroupOption__11"
      value={1}
    >
      One
    </option>
    <option
      key="__SelectFormGroupOption__12"
      value={2}
    >
      Two
    </option>
    <option
      key="__SelectFormGroupOption__13"
      value={3}
    >
      Three
    </option>
    <option
      key="__SelectFormGroupOption__14"
      value={4}
    >
      For
    </option>
    <option
      key="__SelectFormGroupOption__15"
      value={5}
    >
      Fife
    </option>
  </select>
</div>
`;

exports[`Component <SelectFormGroup /> should renders with different state of validation 2`] = `
<div
  className="form-group has-error"
>
  <label
    className="control-label"
    htmlFor="test-id"
  >
    Test label
  </label>
  <select
    className="form-control input-sm"
    disabled={false}
    id="test-id"
    name="test-name"
    value=""
  >
    <option />
    <option
      key="__SelectFormGroupOption__16"
      value={1}
    >
      One
    </option>
    <option
      key="__SelectFormGroupOption__17"
      value={2}
    >
      Two
    </option>
    <option
      key="__SelectFormGroupOption__18"
      value={3}
    >
      Three
    </option>
    <option
      key="__SelectFormGroupOption__19"
      value={4}
    >
      For
    </option>
    <option
      key="__SelectFormGroupOption__20"
      value={5}
    >
      Fife
    </option>
  </select>
  <span
    className="help-block animate-fade"
  >
    Error
  </span>
</div>
`;

exports[`Component <SelectFormGroup /> should renders with different state of validation 3`] = `
<div
  className="form-group has-error"
>
  <label
    className="control-label"
    htmlFor="test-id"
  >
    Test label
  </label>
  <select
    className="form-control input-sm"
    disabled={false}
    id="test-id"
    name="test-name"
    value=""
  >
    <option />
    <option
      key="__SelectFormGroupOption__21"
      value={1}
    >
      One
    </option>
    <option
      key="__SelectFormGroupOption__22"
      value={2}
    >
      Two
    </option>
    <option
      key="__SelectFormGroupOption__23"
      value={3}
    >
      Three
    </option>
    <option
      key="__SelectFormGroupOption__24"
      value={4}
    >
      For
    </option>
    <option
      key="__SelectFormGroupOption__25"
      value={5}
    >
      Fife
    </option>
  </select>
  <span
    className="help-block animate-fade"
  >
    Error
  </span>
</div>
`;

exports[`Component <SelectFormGroup /> should renders with different state of validation 4`] = `
<div
  className="form-group has-error"
>
  <label
    className="control-label"
    htmlFor="test-id"
  >
    Test label
  </label>
  <select
    className="form-control input-sm"
    disabled={false}
    id="test-id"
    name="test-name"
    value=""
  >
    <option />
    <option
      key="__SelectFormGroupOption__26"
      value={1}
    >
      One
    </option>
    <option
      key="__SelectFormGroupOption__27"
      value={2}
    >
      Two
    </option>
    <option
      key="__SelectFormGroupOption__28"
      value={3}
    >
      Three
    </option>
    <option
      key="__SelectFormGroupOption__29"
      value={4}
    >
      For
    </option>
    <option
      key="__SelectFormGroupOption__30"
      value={5}
    >
      Fife
    </option>
  </select>
  <span
    className="help-block animate-fade"
  >
    Error
  </span>
</div>
`;

exports[`Component <SelectFormGroup /> should renders with different state of validation 5`] = `
<div
  className="form-group has-success"
>
  <label
    className="control-label"
    htmlFor="test-id"
  >
    Test label
  </label>
  <select
    className="form-control input-sm"
    disabled={false}
    id="test-id"
    name="test-name"
    value=""
  >
    <option />
    <option
      key="__SelectFormGroupOption__31"
      value={1}
    >
      One
    </option>
    <option
      key="__SelectFormGroupOption__32"
      value={2}
    >
      Two
    </option>
    <option
      key="__SelectFormGroupOption__33"
      value={3}
    >
      Three
    </option>
    <option
      key="__SelectFormGroupOption__34"
      value={4}
    >
      For
    </option>
    <option
      key="__SelectFormGroupOption__35"
      value={5}
    >
      Fife
    </option>
  </select>
</div>
`;

exports[`Component <SelectFormGroup /> should renders with different state of validation 6`] = `
<div
  className="form-group"
>
  <label
    className="control-label"
    htmlFor="test-id"
  >
    Test label
  </label>
  <select
    className="form-control input-sm"
    disabled={false}
    id="test-id"
    name="test-name"
    value=""
  >
    <option />
    <option
      key="__SelectFormGroupOption__36"
      value={1}
    >
      One
    </option>
    <option
      key="__SelectFormGroupOption__37"
      value={2}
    >
      Two
    </option>
    <option
      key="__SelectFormGroupOption__38"
      value={3}
    >
      Three
    </option>
    <option
      key="__SelectFormGroupOption__39"
      value={4}
    >
      For
    </option>
    <option
      key="__SelectFormGroupOption__40"
      value={5}
    >
      Fife
    </option>
  </select>
</div>
`;

exports[`Component <SelectFormGroup /> should renders with different state of validation 7`] = `
<div
  className="form-group"
>
  <label
    className="control-label"
    htmlFor="test-id"
  >
    Test label
  </label>
  <select
    className="form-control input-sm"
    disabled={false}
    id="test-id"
    name="test-name"
    value=""
  >
    <option />
    <option
      key="__SelectFormGroupOption__41"
      value={1}
    >
      One
    </option>
    <option
      key="__SelectFormGroupOption__42"
      value={2}
    >
      Two
    </option>
    <option
      key="__SelectFormGroupOption__43"
      value={3}
    >
      Three
    </option>
    <option
      key="__SelectFormGroupOption__44"
      value={4}
    >
      For
    </option>
    <option
      key="__SelectFormGroupOption__45"
      value={5}
    >
      Fife
    </option>
  </select>
</div>
`;

exports[`Component <SelectFormGroup /> should renders with error message correctly 1`] = `
<div
  className="form-group has-error"
>
  <label
    className="control-label"
    htmlFor="test-id"
  >
    Test label
  </label>
  <select
    className="form-control input-sm"
    id="test-id"
    name="test-name"
    value=""
  >
    <option />
    <option
      key="__SelectFormGroupOption__46"
      value={1}
    >
      One
    </option>
    <option
      key="__SelectFormGroupOption__47"
      value={2}
    >
      Two
    </option>
    <option
      key="__SelectFormGroupOption__48"
      value={3}
    >
      Three
    </option>
    <option
      key="__SelectFormGroupOption__49"
      value={4}
    >
      For
    </option>
    <option
      key="__SelectFormGroupOption__50"
      value={5}
    >
      Fife
    </option>
  </select>
  <span
    className="help-block animate-fade"
  >
    Error
  </span>
</div>
`;

exports[`Component <SelectFormGroup /> should renders with error message correctly 2`] = `
<div
  className="form-group has-error"
>
  <label
    className="control-label"
    htmlFor="test-id"
  >
    Test label
  </label>
  <select
    className="form-control input-sm"
    id="test-id"
    name="test-name"
    value=""
  >
    <option />
    <option
      key="__SelectFormGroupOption__51"
      value={1}
    >
      One
    </option>
    <option
      key="__SelectFormGroupOption__52"
      value={2}
    >
      Two
    </option>
    <option
      key="__SelectFormGroupOption__53"
      value={3}
    >
      Three
    </option>
    <option
      key="__SelectFormGroupOption__54"
      value={4}
    >
      For
    </option>
    <option
      key="__SelectFormGroupOption__55"
      value={5}
    >
      Fife
    </option>
  </select>
  <span
    className="required-label"
  >
    Error
  </span>
</div>
`;

exports[`Component <SelectFormGroup /> should renders with error message correctly 3`] = `
<div
  className="form-group"
>
  <label
    className="control-label"
    htmlFor="test-id"
  >
    Test label
  </label>
  <select
    className="form-control input-sm"
    id="test-id"
    name="test-name"
    value=""
  >
    <option />
    <option
      key="__SelectFormGroupOption__56"
      value={1}
    >
      One
    </option>
    <option
      key="__SelectFormGroupOption__57"
      value={2}
    >
      Two
    </option>
    <option
      key="__SelectFormGroupOption__58"
      value={3}
    >
      Three
    </option>
    <option
      key="__SelectFormGroupOption__59"
      value={4}
    >
      For
    </option>
    <option
      key="__SelectFormGroupOption__60"
      value={5}
    >
      Fife
    </option>
  </select>
</div>
`;

exports[`Component <SelectFormGroup /> should renders with error message correctly 4`] = `
<div
  className="form-group"
>
  <label
    className="control-label"
    htmlFor="test-id"
  >
    Test label
  </label>
  <select
    className="form-control input-sm"
    id="test-id"
    name="test-name"
    value=""
  >
    <option />
    <option
      key="__SelectFormGroupOption__61"
      value={1}
    >
      One
    </option>
    <option
      key="__SelectFormGroupOption__62"
      value={2}
    >
      Two
    </option>
    <option
      key="__SelectFormGroupOption__63"
      value={3}
    >
      Three
    </option>
    <option
      key="__SelectFormGroupOption__64"
      value={4}
    >
      For
    </option>
    <option
      key="__SelectFormGroupOption__65"
      value={5}
    >
      Fife
    </option>
  </select>
</div>
`;
